tests/format/misc/errors/js/discard-binding/invalid-sequence-expression.js
(void, x);

(x, void);

(void, () => {});
